--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <canvas id="cosmos-bg"></canvas>
 
-    <div class="last-updated">Last updated: November 2025</div>
+    <div class="last-updated">Last updated: December 2025</div>
 
     <nav class="navbar">
         <ul class="nav-links">
@@ -146,6 +146,21 @@
                 </div>
 
                 <div class="publications-list-dynamic">
+
+                    <!-- Paper New (Dec 2025) -->
+                    <article class="pub-item" data-year="2026" data-topics=""
+                        onclick="window.open('https://arxiv.org/abs/2512.05847', '_blank')">
+                        <div class="pub-year">2025</div>
+                        <div class="pub-details">
+                            <h3>A redshift-independent theoretical halo mass function validated with the Uchuu
+                                simulations</h3>
+                            <div class="pub-meta">
+                                <span class="pub-journal">arXiv</span>
+                                <span class="authors"><strong>E. Fernández-García</strong> et al.</span>
+                                <span class="read-more">📄</span>
+                            </div>
+                        </div>
+                    </article>
 
                     <!-- Paper 3 -->
                     <article class="pub-item" data-year="2026" data-topics="mocks desi"
